// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render a different name, prompt, and beta tag if provided 1`] = `
<div>
  <EuiTitle
    size="m"
    textTransform="none"
  >
    <h1>
      <FormattedMessage
        defaultMessage="Create {indexPatternName}"
        id="kbn.management.createIndexPatternHeader"
        values={
          Object {
            "indexPatternName": "test index pattern",
          }
        }
      />
      <React.Fragment>
         
        <EuiBetaBadge
          label="Beta"
          tooltipPosition="top"
        />
      </React.Fragment>
    </h1>
  </EuiTitle>
  <EuiFlexGroup
    alignItems="flexEnd"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="spaceBetween"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiText
        grow={true}
        size="m"
      >
        <p>
          <EuiTextColor
            color="subdued"
            component="span"
          >
            <FormattedMessage
              defaultMessage="Kibana uses index patterns to retrieve data from Elasticsearch indices for things like visualizations."
              id="kbn.management.createIndexPatternLabel"
              values={Object {}}
            />
          </EuiTextColor>
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <React.Fragment>
    <EuiSpacer
      size="s"
    />
    <div>
      Test prompt
    </div>
  </React.Fragment>
  <EuiSpacer
    size="m"
  />
</div>
`;

exports[`Header should render normally 1`] = `
<div>
  <EuiTitle
    size="m"
    textTransform="none"
  >
    <h1>
      <FormattedMessage
        defaultMessage="Create {indexPatternName}"
        id="kbn.management.createIndexPatternHeader"
        values={
          Object {
            "indexPatternName": undefined,
          }
        }
      />
    </h1>
  </EuiTitle>
  <EuiFlexGroup
    alignItems="flexEnd"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="spaceBetween"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiText
        grow={true}
        size="m"
      >
        <p>
          <EuiTextColor
            color="subdued"
            component="span"
          >
            <FormattedMessage
              defaultMessage="Kibana uses index patterns to retrieve data from Elasticsearch indices for things like visualizations."
              id="kbn.management.createIndexPatternLabel"
              values={Object {}}
            />
          </EuiTextColor>
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="m"
  />
</div>
`;

exports[`Header should render without including system indices 1`] = `
<div>
  <EuiTitle
    size="m"
    textTransform="none"
  >
    <h1>
      <FormattedMessage
        defaultMessage="Create {indexPatternName}"
        id="kbn.management.createIndexPatternHeader"
        values={
          Object {
            "indexPatternName": undefined,
          }
        }
      />
    </h1>
  </EuiTitle>
  <EuiFlexGroup
    alignItems="flexEnd"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="spaceBetween"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiText
        grow={true}
        size="m"
      >
        <p>
          <EuiTextColor
            color="subdued"
            component="span"
          >
            <FormattedMessage
              defaultMessage="Kibana uses index patterns to retrieve data from Elasticsearch indices for things like visualizations."
              id="kbn.management.createIndexPatternLabel"
              values={Object {}}
            />
          </EuiTextColor>
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="m"
  />
</div>
`;
